Add existing files

--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
   <header>
     <h1>Omnischool</h1>
     <p>Le professeur virtuel personnel au service de votre réussite.</p>
-    <a href="chatbot" class="btn">El Profesor</a>
+    <a href="login" class="btn">El Profesor</a>
     <a href="https://www.lirenligne.net//" class="btn">Bibliothèque</a>
     <a href="https://www.exetat-rdc.com///" class="btn">Items-Exetat</a>
     <a href="subscription" class="btn">Abonnez-vous</a>
